# gdb-format

./: CMakeLists.txt  LICENSE  conanfile.txt  input.txt
src/app/: CMakeLists.txt  _entry.cpp
src/lib/: CMakeLists.txt  formatter.cpp  formatter.hpp  stringify.h  version.cpp  version.hpp
src/test/: CMakeLists.txt  test-formatter.cpp  test-version.cpp
